--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.guide">
+        package="com.example.guide">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Guide">
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.Guide">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+                android:name=".Pravila"
+                android:exported="true" />
+        <activity
+                android:name=".Info_About_Me"
+                android:exported="true" />
+        <activity
+                android:name=".Theory"
+                android:exported="true" />
+        <activity
+                android:name=".Practic"
+                android:exported="true" />
+        <activity
+                android:name=".QuizRes1"
+                android:exported="true" />
+        <activity
+                android:name=".MainActivity"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
